# Control_Diff_finance

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/controldiff/: __init__.py  config.py  logging.py
src/controldiff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/controldiff/agents/: graph.py  schemas.py  state.py
src/controldiff/agents/nodes/: control_mapper.py  obligation_extractor.py
src/controldiff/api/: deps.py  main.py
src/controldiff/api/routers/: health.py  regulations.py  reports.py  review.py  ui.py
src/controldiff/db/: session.py
src/controldiff/domain/: dto.py  enums.py  models.py
src/controldiff/observability/: metrics.py  tracing.py
src/controldiff/retrieval/: control_search.py
src/controldiff/services/: regulation_service.py  report_service.py  review_service.py
src/controldiff/web/: __init___.py
src/controldiff/web/static/: app.css
src/controldiff/web/templates/: base.html  run_detail.html  runs.html
src/controldiff/workers/: main.py
tests/: conftest.py
tests/integration/: test_api_runs.py  test_review_flow.py
tests/smoke/: test_local_stack.py
tests/unit/: test_agent_graph_unit.py  test_control_mapper.py  test_control_search.py  test_obligation_extractor.py  test_settings.py
